@@ -4,7 +4,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT([dvisvgm],[2.13],[martin.gieseking@uos.de])
+AC_INIT([dvisvgm],[2.13.1],[martin.gieseking@uos.de])
 DATE="January 2022"
 AC_CONFIG_SRCDIR(src)
 AC_CONFIG_HEADERS([config.h])
