@@ -4,10 +4,10 @@
 .\" Generator: DocBook XSL Stylesheets vsnapshot <http://docbook.sf.net/>
 .\"      Date: 2022-01-18
 .\"    Manual: dvisvgm Manual
-.\"    Source: dvisvgm 2.13
+.\"    Source: dvisvgm 2.13.1
 .\"  Language: English
 .\"
-.TH "DVISVGM" "1" "2022\-01\-18" "dvisvgm 2\&.13" "dvisvgm Manual"
+.TH "DVISVGM" "1" "2022\-01\-18" "dvisvgm 2\&.13\&.1" "dvisvgm Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
