@@ -1,7 +1,7 @@
 #include <winver.h>
 
-#define DVISVGM_VERSION 2,13,0,0
-#define DVISVGM_VERSION_STR "2.13\0"
+#define DVISVGM_VERSION 2,13,1,0
+#define DVISVGM_VERSION_STR "2.13.1\0"
 
 VS_VERSION_INFO  VERSIONINFO
   FILEVERSION    DVISVGM_VERSION
